parsing openapi schema working.

--- a/projects/download_websites/combine files.ipynb
+++ b/projects/download_websites/combine files.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "couldn't read: akoya-docs-cleaned-up/.DS_Store\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -37,7 +29,7 @@
     "    with open(new_filepath, 'w', encoding='utf-8') as file:\n",
     "        file.write(content)\n",
     "\n",
-    "read_files_and_combine_to_new_file(\"akoya-docs-cleaned-up\", \"akoya-docs-complete.html\")"
+    "read_files_and_combine_to_new_file(\"plaid-docs-cleaned-up\", \"plaid-docs-complete.html\")"
    ]
   },
   {
