akoya working with better example finding.

--- a/projects/parse_openapi/parse open api v4.ipynb
+++ b/projects/parse_openapi/parse open api v4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -297,19 +297,31 @@
     "example_json = get_example_response_for_endpoint(openapi_data, endpoint_path)\n",
     "\n",
     "# def get_example_for_property(example_json, property_path):\n",
-    "#     print(f\"{property_path} example json: {example_json}\")\n",
     "#     \"\"\"\n",
     "#     Extracts an example value for a given property path from the example json.\n",
     "#     \"\"\"\n",
     "#     parts = property_path.split('.')\n",
-    "#     try:\n",
-    "#         for part in parts:\n",
-    "#             if isinstance(example_json, list):\n",
-    "#                 example_json = example_json[0]\n",
-    "#             example_json = example_json[part]\n",
-    "#         return example_json\n",
-    "#     except (KeyError, TypeError):\n",
+    "#\n",
+    "#     def recursive_search(data, remaining_parts):\n",
+    "#         if not remaining_parts:\n",
+    "#             return data\n",
+    "#         key = remaining_parts[0]\n",
+    "#         if isinstance(data, list):\n",
+    "#             for item in data:\n",
+    "#                 try:\n",
+    "#                     result = recursive_search(item[key], remaining_parts[1:])\n",
+    "#                     if result is not None:\n",
+    "#                         return result\n",
+    "#                 except (KeyError, TypeError):\n",
+    "#                     continue\n",
+    "#         else:\n",
+    "#             try:\n",
+    "#                 return recursive_search(data[key], remaining_parts[1:])\n",
+    "#             except (KeyError, TypeError):\n",
+    "#                 return None\n",
     "#         return None\n",
+    "#\n",
+    "#     return recursive_search(example_json, parts)\n",
     "\n",
     "def get_example_for_property(example_json, property_path):\n",
     "    \"\"\"\n",
