--- a/projects/text_splitter/text_splitter.ipynb
+++ b/projects/text_splitter/text_splitter.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -112,7 +115,10 @@
     "line_groups = group_lines_by_length(lines)\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -127,7 +133,10 @@
     "        writer.writerow([line_group])\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -140,7 +149,10 @@
     "index_to_split_so_word_isnt_cut = text.find()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   }
  ],
