--- a/projects/text_splitter/new american standard bible - parser.ipynb
+++ b/projects/text_splitter/new american standard bible - parser.ipynb
@@ -676,8 +676,9 @@
     }
    ],
    "source": [
-    "parsed_verses = parse_bible_verses(\"../../data/bible/new american standard cleaned.txt\")\n",
-    "# write_parsed_verses_to_csv(parsed_verses, \"../../data/bible/new american standard cleaned.csv\")"
+    "def parse_bible_and_write_csv():\n",
+    "    parsed_verses = parse_bible_verses(\"../../data/bible/cleaned/new american standard cleaned.txt\")\n",
+    "    write_parsed_verses_to_csv(parsed_verses, \"../../data/bible/cleaned/new american standard cleaned.csv\")"
    ],
    "metadata": {
     "collapsed": false,
