llama cpp working well.  chroma working well.

--- a/projects/llamacpp/llama cpp.ipynb
+++ b/projects/llamacpp/llama cpp.ipynb
@@ -475,19 +475,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 112,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  The capital of New Hampshire is Concord. According to the U.S. Census Bureau, the population of Concord as of 2020 was approximately 43,771 people. Concord is located in Merrimack County and is the largest city in the state. It has a rich history dating back to 1725 when it was first settled and was named the capital of New Hampshire in 1808. The city is home to many historic sites, including the State House, which is the seat of government for the state, and the McAuliffe-Shepard Discovery Center, which features exhibits on the history of flight and space exploration. Concord is also known for its vibrant cultural scene, with a variety of museums, galleries, and festivals throughout the year.\n",
-      "answer generated in 26.426579236984253 seconds\n"
+      "  The Gospel of Thomas is a non-canonical text that is one of the most well-known and widely studied apocryphal gospels. It was likely written in the early 2nd century CE and contains sayings and teachings of Jesus that are similar to those found in the canonical Gospels, as well as some unique material. Here are some key verses from the Gospel of Thomas:\n",
+      "1. \"And he said, 'Whoever finds the interpretation of these sayings will not taste death.'\" (Logion 1)\n",
+      "This verse is often seen as a statement about the importance of understanding Jesus' teachings in order to gain eternal life.\n",
+      "2. \"Jesus saw infants being suckled. He said to his disciples, 'These infants are like those who enter the kingdom.'\" (Logion 3)\n",
+      "This verse highlights the idea that even the youngest and most vulnerable among us can enter the kingdom of God through faith in Jesus.\n",
+      "3. \"Let your loins be girded and your lamps burning, and be like men who are waiting for their master.\" (Logion 27)\n",
+      "This verse is similar to Jesus' teaching in Matthew 25:1-13 about the return of the bridegroom and the readiness of the bridesmaids. It emphasizes the importance of being prepared for the return of Christ.\n",
+      "4. \"The kingdom of the Father is like a woman who is carrying a jar full of meal. She took it and gashed it, and was going to pour it into another vessel. But when she had reached the vessel, she discovered that it was broken.\" (Logion 103)\n",
+      "This verse uses an image from everyday life to illustrate the idea that the kingdom of God is fragile and can be easily lost if we are not careful.\n",
+      "5. \"Jesus saw Nathanael coming toward him and said, 'Here is a true Israelite.'\" (Logion 14)\n",
+      "This verse highlights Jesus' ability to see into people's hearts and identify their true nature, even before they have the opportunity to prove themselves.\n",
+      "6. \"The kingdom of God is like a treasure hidden in a field, which a man found and covered up. Then in his joy he goes and sells all that he has and buys that field.\" (Logion 25)\n",
+      "This verse uses an image from everyday life to illustrate the idea that the kingdom of God is a valuable treasure that can be found by those who are willing to search for it and sacrifice everything in order to obtain it.\n",
+      "7. \"Jesus saw a Samaritan carrying his goods and he was amazed, and said, 'Were not the Samaritans dead who were tormented by demons, and he was not tormented?'\" (Logion 93)\n",
+      "This verse highlights Jesus' compassion for those who are marginalized or oppressed, even if they are from a different cultural or religious background.\n",
+      "8. \"The kingdom of God is like a man who wanted to kill a powerful man. He was unable to do it, but he killed the king's officer instead.\" (Logion 10)\n",
+      "This verse uses an image from political intrigue to illustrate the idea that the kingdom of God is not something that can be achieved through violence or political power, but rather through faith and obedience to God.\n",
+      "9. \"Jesus saw a man who was born blind and said, 'Your eyes will see the light.'\" (Logion 17)\n",
+      "This verse highlights Jesus' ability to heal and transform those who are physically or spiritually blind, and his promise of eternal life for all who follow him.\n",
+      "10. \"The kingdom of God is like a man who was good and pure in heart, and who had found the treasure hidden in the field.\" (Logion 26)\n",
+      "This verse uses an image from everyday life to illustrate the idea that the kingdom of God is a valuable treasure that can be found by those who are good and pure in heart, and who seek it with all their might.\n",
+      "answer generated in 118.74569416046143 seconds\n"
      ]
     }
    ],
    "source": [
-    "stream_prompt(\"What is the capital of new hampshire?\")"
+    "stream_prompt(\"What are some key verses in the Gospel of Thomas?\")"
    ],
    "metadata": {
     "collapsed": false,
