--- a/projects/llamacpp/function calling.ipynb
+++ b/projects/llamacpp/function calling.ipynb
@@ -383,16 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "import json\n",
-    "def function_age_prompt(question=\"Extract Jason is 25 years old\"):\n",
+    "def function_calling_prompt(question):\n",
     "    response1 = llm.create_chat_completion(\n",
     "        messages = [\n",
     "            {\n",
     "                \"role\": \"system\",\n",
-    "                \"content\": \"A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions. The assistant calls functions with appropriate input when necessary\"\n",
+    "                \"content\": \"You are an assistant who perfectly responds to questions with as many details as possible, without making up facts. Only call functions when calling the function is necessary to answer the question, and all parameters are supplied.  Do not make up parameter values if they are not supplied.\"\n",
     "            },\n",
     "            {\n",
     "                \"role\": \"user\",\n",
@@ -402,44 +402,39 @@
     "        tools=[{\n",
     "            \"type\": \"function\",\n",
     "            \"function\": {\n",
-    "                \"name\": \"UserDetail\",\n",
+    "                \"name\": \"get_user_details\",\n",
     "                \"parameters\": {\n",
     "                    \"type\": \"object\",\n",
-    "                    \"title\": \"UserDetail\",\n",
+    "                    \"title\": \"get_user_details\",\n",
     "                    \"properties\": {\n",
-    "                        \"name\": {\n",
-    "                            \"title\": \"Name\",\n",
+    "                        \"first_name\": {\n",
+    "                            \"title\": \"First Name\",\n",
     "                            \"type\": \"string\"\n",
     "                        },\n",
-    "                        \"age\": {\n",
-    "                            \"title\": \"Age\",\n",
-    "                            \"type\": \"integer\"\n",
+    "                        \"last_name\": {\n",
+    "                            \"title\": \"Last Name\",\n",
+    "                            \"type\": \"string\" #integer\n",
     "                        }\n",
     "                    },\n",
-    "                    \"required\": [ \"name\", \"age\" ]\n",
+    "                    \"required\": [ \"first_name\", \"last_name\" ]\n",
     "                }\n",
     "            }\n",
     "        }],\n",
     "        tool_choice={\n",
     "            \"type\": \"function\",\n",
     "            \"function\": {\n",
-    "                \"name\": \"UserDetail\"\n",
+    "                \"name\": \"get_user_details\"\n",
     "            }\n",
     "        }\n",
     "    )\n",
-    "    function = is_llm_response_a_local_function_call(response1)\n",
+    "    function = get_function_call_details_from_llm_response(response1)\n",
     "    if function is not None:\n",
-    "        if function['function_name'] == 'UserDetail':\n",
-    "            UserDetail(function['arguments'])\n",
+    "        if function['function_name'] == 'get_user_details':\n",
+    "            get_user_details(function['arguments'])\n",
     "\n",
     "    print(response1)\n",
     "\n",
-    "def UserDetail(args):\n",
-    "    arguments = json.loads(args)\n",
-    "    print(f\"UserDetail function called with args: {arguments}\")\n",
-    "    print(f\"{arguments['name']}\")\n",
-    "\n",
-    "def is_llm_response_a_local_function_call(response):\n",
+    "def get_function_call_details_from_llm_response(response):\n",
     "    choices = response['choices']\n",
     "    choice = choices[0]\n",
     "    if 'message' in choice and 'function_call' in choice['message']:\n",
@@ -452,15 +447,12 @@
     "            \"arguments\": arguments,\n",
     "        }\n",
     "    return None\n",
-    "    #this works too:\n",
-    "    # if 'message' in choice and 'tool_calls' in choice['message']:\n",
-    "    #     tool_call = choice['message']['tool_calls'][0]\n",
-    "    #     print(f\"tool_call is {tool_call}\")\n",
-    "    #     if tool_call['type'] == 'function':\n",
-    "    #         function = tool_call['function']\n",
-    "    #         function_name = function['name']\n",
-    "    #         arguments = function['arguments']\n",
-    "    #         print(f\"2. function call for {function_name} with arguments {arguments}\")"
+    "\n",
+    "# function that will be called, based on the LLM's response, which will indicate that it wants the function to be called, along with the arguments\n",
+    "# arguments are a json string.  e.g. '{\"first_name\": \"Jason\", \"last_name: \"McAffee\"}'\n",
+    "def get_user_details(args):\n",
+    "    arguments = json.loads(args)\n",
+    "    print(f\"get_user_details function called with arguments first_name: {arguments['first_name']}, last_name: {arguments['last_name']}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -471,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
@@ -482,11 +474,11 @@
       "namespace functions {\n",
       "\n",
       "  // \n",
-      "  type UserDetail = (_: {\n",
+      "  type get_user_details = (_: {\n",
       "    // \n",
-      "    name: string,\n",
+      "    first_name: string,\n",
       "    // \n",
-      "    age: integer,\n",
+      "    last_name: string,\n",
       "  }) => any;\n",
       "\n",
       "} // namespace functions\n",
@@ -496,11 +488,11 @@
       "namespace functions {\n",
       "\n",
       "  // \n",
-      "  type UserDetail = (_: {\n",
+      "  type get_user_details = (_: {\n",
       "    // \n",
-      "    name: string,\n",
+      "    first_name: string,\n",
       "    // \n",
-      "    age: integer,\n",
+      "    last_name: string,\n",
       "  }) => any;\n",
       "\n",
       "} // namespace functions\n",
@@ -508,19 +500,20 @@
       "system:\n",
       "A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions. The assistant calls functions with appropriate input when necessary\n",
       "system:\n",
-      "A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions. The assistant calls functions with appropriate input when necessary\n",
+      "You are an assistant who perfectly responds to questions with as many details as possible, without making up facts. Only call functions when calling the function is necessary to answer the question, and all parameters are supplied.  Do not make up parameter values if they are not supplied.\n",
       "user:\n",
-      "</s>Extract Jason is 25 years old</s>\n",
-      "assistant to=functions.UserDetail:\n",
+      "</s>Who is user Jason McAffee?</s>\n",
+      "assistant to=functions.get_user_details:\n",
       "\n",
-      "{ \"age\": 25, \"name\": \"Jason\" }\n",
-      "{'id': 'chatcmpl-04b0cc69-7f04-465c-bb1c-1ce730ef71ad', 'object': 'chat.completion', 'created': 1700845049, 'model': '/Volumes/4Tera_SSD_2022/llm_models/functionary-7b-v1.Q5_K.gguf', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': None, 'function_call': {'name': 'UserDetail', 'arguments': '{ \"age\": 25, \"name\": \"Jason\" }'}, 'tool_calls': [{'id': 'UserDetail', 'type': 'function', 'function': {'name': 'UserDetail', 'arguments': '{ \"age\": 25, \"name\": \"Jason\" }'}}]}, 'finish_reason': 'tool_calls'}], 'usage': {'prompt_tokens': 246, 'completion_tokens': 16, 'total_tokens': 262}}\n"
+      "{ \"first_name\": \"Jason\", \"last_name\": \"McAffee\" }\n",
+      "1. function call for get_user_details with arguments { \"first_name\": \"Jason\", \"last_name\": \"McAffee\" }\n",
+      "get_user_details function called with args: {'first_name': 'Jason', 'last_name': 'McAffee'}\n",
+      "{'id': 'chatcmpl-5eedc486-7db3-4f26-b312-2faec3722643', 'object': 'chat.completion', 'created': 1700849779, 'model': '/Volumes/4Tera_SSD_2022/llm_models/functionary-7b-v1.Q5_K.gguf', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': None, 'function_call': {'name': 'get_user_details', 'arguments': '{ \"first_name\": \"Jason\", \"last_name\": \"McAffee\" }'}, 'tool_calls': [{'id': 'get_user_details', 'type': 'function', 'function': {'name': 'get_user_details', 'arguments': '{ \"first_name\": \"Jason\", \"last_name\": \"McAffee\" }'}}]}, 'finish_reason': 'tool_calls'}], 'usage': {'prompt_tokens': 278, 'completion_tokens': 21, 'total_tokens': 299}}\n"
      ]
     }
    ],
    "source": [
-    "function_age_prompt(\"Extract Jason is 25 years old\")\n",
-    "#{'id': 'chatcmpl-04b0cc69-7f04-465c-bb1c-1ce730ef71ad', 'object': 'chat.completion', 'created': 1700845049, 'model': '/Volumes/4Tera_SSD_2022/llm_models/functionary-7b-v1.Q5_K.gguf', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': None, 'function_call': {'name': 'UserDetail', 'arguments': '{ \"age\": 25, \"name\": \"Jason\" }'}, 'tool_calls': [{'id': 'UserDetail', 'type': 'function', 'function': {'name': 'UserDetail', 'arguments': '{ \"age\": 25, \"name\": \"Jason\" }'}}]}, 'finish_reason': 'tool_calls'}], 'usage': {'prompt_tokens': 246, 'completion_tokens': 16, 'total_tokens': 262}}"
+    "function_calling_prompt(\"Who is user Jason McAffee?\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -531,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
@@ -542,11 +535,11 @@
       "namespace functions {\n",
       "\n",
       "  // \n",
-      "  type UserDetail = (_: {\n",
+      "  type get_user_details = (_: {\n",
       "    // \n",
-      "    name: string,\n",
+      "    first_name: string,\n",
       "    // \n",
-      "    age: integer,\n",
+      "    last_name: string,\n",
       "  }) => any;\n",
       "\n",
       "} // namespace functions\n",
@@ -556,11 +549,11 @@
       "namespace functions {\n",
       "\n",
       "  // \n",
-      "  type UserDetail = (_: {\n",
+      "  type get_user_details = (_: {\n",
       "    // \n",
-      "    name: string,\n",
+      "    first_name: string,\n",
       "    // \n",
-      "    age: integer,\n",
+      "    last_name: string,\n",
       "  }) => any;\n",
       "\n",
       "} // namespace functions\n",
@@ -568,21 +561,20 @@
       "system:\n",
       "A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions. The assistant calls functions with appropriate input when necessary\n",
       "system:\n",
-      "A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions. The assistant calls functions with appropriate input when necessary\n",
+      "You are an assistant who perfectly responds to questions with as many details as possible, without making up facts. Only call functions when calling the function is necessary to answer the question, and all parameters are supplied.  Do not make up parameter values if they are not supplied.\n",
       "user:\n",
-      "</s>John is 1 year older than Sarah.  Sarah is 25.  Get the user details for John.</s>\n",
-      "assistant to=functions.UserDetail:\n",
+      "</s>what is a camel?</s>\n",
+      "assistant to=functions.get_user_details:\n",
       "\n",
-      "{ \"age\": 26, \"name\": \"John\" }\n",
-      "1. function call for UserDetail with arguments { \"age\": 26, \"name\": \"John\" }\n",
-      "UserDetail function called with args: {'age': 26, 'name': 'John'}\n",
-      "John\n",
-      "{'id': 'chatcmpl-d6e3f7fc-21db-4cfb-9dc2-b0c47f6382a1', 'object': 'chat.completion', 'created': 1700849142, 'model': '/Volumes/4Tera_SSD_2022/llm_models/functionary-7b-v1.Q5_K.gguf', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': None, 'function_call': {'name': 'UserDetail', 'arguments': '{ \"age\": 26, \"name\": \"John\" }'}, 'tool_calls': [{'id': 'UserDetail', 'type': 'function', 'function': {'name': 'UserDetail', 'arguments': '{ \"age\": 26, \"name\": \"John\" }'}}]}, 'finish_reason': 'tool_calls'}], 'usage': {'prompt_tokens': 261, 'completion_tokens': 15, 'total_tokens': 276}}\n"
+      "{ \"first_name\": \"Arianna\", \"last_name\": \"Camelin\" }\n",
+      "1. function call for get_user_details with arguments { \"first_name\": \"Arianna\", \"last_name\": \"Camelin\" }\n",
+      "get_user_details function called with arguments first_name: Arianna, last_name: Camelin\n",
+      "{'id': 'chatcmpl-8846c195-fbbb-4a16-af53-fcd941db6bfd', 'object': 'chat.completion', 'created': 1700849983, 'model': '/Volumes/4Tera_SSD_2022/llm_models/functionary-7b-v1.Q5_K.gguf', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': None, 'function_call': {'name': 'get_user_details', 'arguments': '{ \"first_name\": \"Arianna\", \"last_name\": \"Camelin\" }'}, 'tool_calls': [{'id': 'get_user_details', 'type': 'function', 'function': {'name': 'get_user_details', 'arguments': '{ \"first_name\": \"Arianna\", \"last_name\": \"Camelin\" }'}}]}, 'finish_reason': 'tool_calls'}], 'usage': {'prompt_tokens': 276, 'completion_tokens': 21, 'total_tokens': 297}}\n"
      ]
     }
    ],
    "source": [
-    "function_age_prompt(\"John is 1 year older than Sarah.  Sarah is 25.  Get the user details for John.\")"
+    "function_calling_prompt(\"what is a camel?\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -595,7 +587,17 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "    #this works too:\n",
+    "# if 'message' in choice and 'tool_calls' in choice['message']:\n",
+    "#     tool_call = choice['message']['tool_calls'][0]\n",
+    "#     print(f\"tool_call is {tool_call}\")\n",
+    "#     if tool_call['type'] == 'function':\n",
+    "#         function = tool_call['function']\n",
+    "#         function_name = function['name']\n",
+    "#         arguments = function['arguments']\n",
+    "#         print(f\"2. function call for {function_name} with arguments {arguments}\")"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
