openai function calling working.  need message history...

--- a/projects/llamacpp/function calling.ipynb
+++ b/projects/llamacpp/function calling.ipynb
@@ -420,12 +420,13 @@
     "                }\n",
     "            }\n",
     "        }],\n",
-    "        tool_choice={\n",
-    "            \"type\": \"function\",\n",
-    "            \"function\": {\n",
-    "                \"name\": \"get_user_details\"\n",
-    "            }\n",
-    "        }\n",
+    "        tool_choice='auto',\n",
+    "        # tool_choice={\n",
+    "        #     \"type\": \"function\",\n",
+    "        #     \"function\": {\n",
+    "        #         \"name\": \"get_user_details\"\n",
+    "        #     }\n",
+    "        # }\n",
     "    )\n",
     "    function = get_function_call_details_from_llm_response(response1)\n",
     "    if function is not None:\n",
