openai function calling working.  need message history...

--- a/projects/chatgpt/chatgpt openai.ipynb
+++ b/projects/chatgpt/chatgpt openai.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "outputs": [
     {
      "name": "stdout",
@@ -270,44 +270,27 @@
       "What is a camel?\n",
       "\n",
       "{\n",
-      "  \"id\": \"chatcmpl-8Odq2EJGwwj7M8zc3q79VAMonyXWV\",\n",
+      "  \"id\": \"chatcmpl-8OdteL587sxQQR10wCzkYh1u17ijP\",\n",
       "  \"object\": \"chat.completion\",\n",
-      "  \"created\": 1700883702,\n",
+      "  \"created\": 1700883926,\n",
       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
       "  \"choices\": [\n",
       "    {\n",
       "      \"index\": 0,\n",
       "      \"message\": {\n",
       "        \"role\": \"assistant\",\n",
-      "        \"content\": \"A camel is a large mammal with a humped back, long legs, and a long neck. It is commonly found in the desert regions of Africa and Asia. Camels are well-adapted to desert life and have the ability to store water in their humps. They are used by humans for transportation and as pack animals in arid regions.\"\n",
+      "        \"content\": \"A camel is a large mammal with a hump on its back. It is known for its ability to survive in harsh desert environments due to its ability to store water. Camels are commonly used as pack animals and can travel long distances without needing much water. They are also known for their distinctive long necks and eyelashes.\"\n",
       "      },\n",
       "      \"finish_reason\": \"stop\"\n",
       "    }\n",
       "  ],\n",
       "  \"usage\": {\n",
       "    \"prompt_tokens\": 120,\n",
-      "    \"completion_tokens\": 73,\n",
-      "    \"total_tokens\": 193\n",
+      "    \"completion_tokens\": 68,\n",
+      "    \"total_tokens\": 188\n",
       "  }\n",
-      "}\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "tool_calls",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "File \u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/openai/openai_object.py:59\u001B[0m, in \u001B[0;36mOpenAIObject.__getattr__\u001B[0;34m(self, k)\u001B[0m\n\u001B[1;32m     58\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m---> 59\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m[\u001B[49m\u001B[43mk\u001B[49m\u001B[43m]\u001B[49m\n\u001B[1;32m     60\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m err:\n",
-      "\u001B[0;31mKeyError\u001B[0m: 'tool_calls'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[38], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mfunction_call_prompt\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\"\"\u001B[39;49m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;124;43mWhat is a camel?\u001B[39;49m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;124;43m\"\"\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn[36], line 65\u001B[0m, in \u001B[0;36mfunction_call_prompt\u001B[0;34m(question)\u001B[0m\n\u001B[1;32m     56\u001B[0m response \u001B[38;5;241m=\u001B[39m openai\u001B[38;5;241m.\u001B[39mChatCompletion\u001B[38;5;241m.\u001B[39mcreate(\n\u001B[1;32m     57\u001B[0m     model\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mgpt-3.5-turbo\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m     58\u001B[0m     messages\u001B[38;5;241m=\u001B[39m[\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     62\u001B[0m     tools\u001B[38;5;241m=\u001B[39mtools\n\u001B[1;32m     63\u001B[0m )\n\u001B[1;32m     64\u001B[0m \u001B[38;5;28mprint\u001B[39m(response)\n\u001B[0;32m---> 65\u001B[0m functions \u001B[38;5;241m=\u001B[39m \u001B[43mget_function_calls_details_from_llm_response\u001B[49m\u001B[43m(\u001B[49m\u001B[43mresponse\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     66\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m functions \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m     67\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m function \u001B[38;5;129;01min\u001B[39;00m functions:\n",
-      "Cell \u001B[0;32mIn[36], line 6\u001B[0m, in \u001B[0;36mget_function_calls_details_from_llm_response\u001B[0;34m(response)\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mget_function_calls_details_from_llm_response\u001B[39m(response):\n\u001B[1;32m      5\u001B[0m     response_message \u001B[38;5;241m=\u001B[39m response\u001B[38;5;241m.\u001B[39mchoices[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;241m.\u001B[39mmessage\n\u001B[0;32m----> 6\u001B[0m     tool_calls \u001B[38;5;241m=\u001B[39m \u001B[43mresponse_message\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtool_calls\u001B[49m\n\u001B[1;32m      7\u001B[0m     results \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[1;32m      8\u001B[0m     \u001B[38;5;66;03m# Step 2: check if the model wanted to call a function\u001B[39;00m\n",
-      "File \u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/openai/openai_object.py:61\u001B[0m, in \u001B[0;36mOpenAIObject.__getattr__\u001B[0;34m(self, k)\u001B[0m\n\u001B[1;32m     59\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m[k]\n\u001B[1;32m     60\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m err:\n\u001B[0;32m---> 61\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mAttributeError\u001B[39;00m(\u001B[38;5;241m*\u001B[39merr\u001B[38;5;241m.\u001B[39margs)\n",
-      "\u001B[0;31mAttributeError\u001B[0m: tool_calls"
+      "}\n",
+      "answer received in 9.581519842147827 seconds.\n"
      ]
     }
    ],
