function calling agent wip.

--- a/projects/chatgpt/chatgpt openai.ipynb
+++ b/projects/chatgpt/chatgpt openai.ipynb
@@ -2,28 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import openai\n",
+    "from projects.chatgpt.agents.LLMFunctionsAgent import LLMFunctionsAgent\n",
     "\n",
     "# configure the client's secret key\n",
     "with open('secret-key.txt', 'r') as file:\n",
     "    secret_key = file.read().strip()\n",
     "openai.api_key = secret_key\n",
     "\n",
-    "max_tokens = 4092"
+    "max_tokens = 4092\n",
+    "\n",
+    "# automatically reload changes to imports\n",
+    "%load_ext autoreload\n",
+    "%autoreload"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-11-26T23:08:12.451331Z",
+     "start_time": "2023-11-26T23:08:12.428612Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import time\n",
@@ -69,68 +87,62 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-11-26T23:05:13.389455Z",
+     "start_time": "2023-11-26T23:05:13.378085Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "asking chatgpt: \n",
-      "What is a camel?\n",
-      "\n",
-      "A camel is a large mammal with a humped back, long legs, and a long neck. It is native to the deserts of Africa and Asia and is well adapted to living in hot and arid conditions. Camels are known for their ability to store water in their humps, enabling them to survive in environments with limited water sources. They are often used as pack animals and are also raised for their milk, meat, and hair.\n",
-      "answer received in 10.847567319869995 seconds.\n"
+      "Who is user Jason McAffee\n",
+      "I'm sorry, but I don't have access to information about specific users unless they provide that information to me.\n",
+      "answer received in 4.245713949203491 seconds.\n"
      ]
     }
    ],
    "source": [
     "stream_prompt(\"\"\"\n",
-    "What is a camel?\n",
+    "Who is user Jason McAffee?\n",
     "\"\"\")"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-11-26T18:04:29.942393Z",
+     "start_time": "2023-11-26T18:04:25.679100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "init\n"
+     ]
+    }
+   ],
    "source": [
-    "# https://github.com/openai/openai-cookbook/blob/main/examples/How_to_call_functions_for_knowledge_retrieval.ipynb\n",
-    "import json\n",
     "\n",
-    "def get_function_calls_details_from_llm_response(response):\n",
-    "    response_message = response.choices[0].message\n",
-    "    tool_calls = response_message.get('tool_calls')\n",
-    "    results = None\n",
-    "    # Step 2: check if the model wanted to call a function\n",
-    "    if tool_calls:\n",
-    "        results = []\n",
-    "        for tool_call in tool_calls:\n",
-    "            function_name = tool_call.function.name\n",
-    "            arguments = tool_call.function.arguments\n",
-    "            result = {\n",
-    "                \"function_name\": function_name,\n",
-    "                \"arguments\": arguments,\n",
-    "                # data needed for subsequent calls to chatgpt\n",
-    "                \"metadata\": {\n",
-    "                    \"tool_call_id\": tool_call.id,\n",
-    "                    \"role\": \"tool\",\n",
-    "                    \"name\": function_name,\n",
-    "                    \"content\": None, # todo: populate this once the function has been executed.\n",
-    "                },\n",
-    "            }\n",
-    "            results.append(result)\n",
-    "    return results\n",
+    "# https://github.com/openai/openai-cookbook/blob/main/examples/How_to_call_functions_for_knowledge_retrieval.ipynb\n",
+    "import json \n",
+    "\n",
+    "llm_functions_agent = LLMFunctionsAgent()\n",
     "\n",
     "def function_call_prompt(question):\n",
     "    tools = [\n",
@@ -169,39 +181,25 @@
     "        tools=tools\n",
     "    )\n",
     "    print(response)\n",
-    "    functions = get_function_calls_details_from_llm_response(response)\n",
-    "    if functions is not None:\n",
-    "        for function in functions:\n",
-    "            if function['function_name'] == 'get_user_details':\n",
-    "                content = get_user_details(function['arguments'])\n",
-    "                function['metadata']['content'] = content\n",
+    "    \n",
+    "    llm_functions_agent.call_appropriate_function_based_on_llm_response(response)\n",
     "\n",
-    "    print(f\"answer received in {time.time() - start_time_seconds} seconds.\")\n",
-    "\n",
-    "# function that will be called, based on the LLM's response, which will indicate that it wants the function to be called, along with the arguments\n",
-    "# arguments are a json string.  e.g. '{\"first_name\": \"Jason\", \"last_name: \"McAffee\"}'\n",
-    "def get_user_details(args):\n",
-    "    arguments = json.loads(args)\n",
-    "    print(f\"get_user_details function called with arguments first_name: {arguments['first_name']}, last_name: {arguments['last_name']}\")\n",
-    "    response = {\n",
-    "        \"age\": 44,\n",
-    "        \"location\": {\n",
-    "            \"state\": \"Utah\"\n",
-    "        },\n",
-    "        \"profession\": \"Software Engineer\"\n",
-    "    }\n",
-    "    return response"
+    "    print(f\"answer received in {time.time() - start_time_seconds} seconds.\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-11-26T23:08:48.705697Z",
+     "start_time": "2023-11-26T23:08:48.703151Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -209,11 +207,10 @@
      "text": [
       "asking chatgpt: \n",
       "Who is user Jason McAffee?\n",
-      "\n",
       "{\n",
-      "  \"id\": \"chatcmpl-8OdsAEvqPHUWMlLYShPRlc90SizCy\",\n",
+      "  \"id\": \"chatcmpl-8PIaDIA8KgwbRVE9BZdRCxZTolDd3\",\n",
       "  \"object\": \"chat.completion\",\n",
-      "  \"created\": 1700883834,\n",
+      "  \"created\": 1701040325,\n",
       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
       "  \"choices\": [\n",
       "    {\n",
@@ -223,7 +220,39 @@
       "        \"content\": null,\n",
       "        \"tool_calls\": [\n",
       "          {\n",
-      "            \"id\": \"call_HnsHtNPVKC6rVYXYEG2duSs3\",\n",
+      "            \"id\": \"call_rlOzREqlNtC6EjPLBzdY6Kb7\",\n",
+      "            \"type\": \"function\",\n",
+      "            \"function\": {\n",
+      "              \"name\": \"get_user_details\",\n",
+      "              \"arguments\": \"{\\n  \\\"first_name\\\": \\\"Jason\\\",\\n  \\\"last_name\\\": \\\"McAffee\\\"\\n}\"\n",
+      "            }\n",
+      "          }\n",
+      "        ]\n",
+      "      },\n",
+      "      \"finish_reason\": \"tool_calls\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"usage\": {\n",
+      "    \"prompt_tokens\": 123,\n",
+      "    \"completion_tokens\": 27,\n",
+      "    \"total_tokens\": 150\n",
+      "  }\n",
+      "}\n",
+      "get_function_calls_details_from_llm_response called for response:\n",
+      "{\n",
+      "  \"id\": \"chatcmpl-8PIaDIA8KgwbRVE9BZdRCxZTolDd3\",\n",
+      "  \"object\": \"chat.completion\",\n",
+      "  \"created\": 1701040325,\n",
+      "  \"model\": \"gpt-3.5-turbo-0613\",\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"index\": 0,\n",
+      "      \"message\": {\n",
+      "        \"role\": \"assistant\",\n",
+      "        \"content\": null,\n",
+      "        \"tool_calls\": [\n",
+      "          {\n",
+      "            \"id\": \"call_rlOzREqlNtC6EjPLBzdY6Kb7\",\n",
       "            \"type\": \"function\",\n",
       "            \"function\": {\n",
       "              \"name\": \"get_user_details\",\n",
@@ -242,11 +271,13 @@
       "  }\n",
       "}\n",
       "get_user_details function called with arguments first_name: Jason, last_name: McAffee\n",
-      "answer received in 3.895408868789673 seconds.\n"
+      "answer received in 3.6406028270721436 seconds.\n"
      ]
     }
    ],
    "source": [
+    "%autoreload\n",
+    "\n",
     "function_call_prompt(\"\"\"\n",
     "Who is user Jason McAffee?\n",
     "\"\"\")"
@@ -255,54 +286,23 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-11-26T23:12:08.200993Z",
+     "start_time": "2023-11-26T23:12:04.521116Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "asking chatgpt: \n",
-      "What is a camel?\n",
-      "\n",
-      "{\n",
-      "  \"id\": \"chatcmpl-8OdteL587sxQQR10wCzkYh1u17ijP\",\n",
-      "  \"object\": \"chat.completion\",\n",
-      "  \"created\": 1700883926,\n",
-      "  \"model\": \"gpt-3.5-turbo-0613\",\n",
-      "  \"choices\": [\n",
-      "    {\n",
-      "      \"index\": 0,\n",
-      "      \"message\": {\n",
-      "        \"role\": \"assistant\",\n",
-      "        \"content\": \"A camel is a large mammal with a hump on its back. It is known for its ability to survive in harsh desert environments due to its ability to store water. Camels are commonly used as pack animals and can travel long distances without needing much water. They are also known for their distinctive long necks and eyelashes.\"\n",
-      "      },\n",
-      "      \"finish_reason\": \"stop\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"usage\": {\n",
-      "    \"prompt_tokens\": 120,\n",
-      "    \"completion_tokens\": 68,\n",
-      "    \"total_tokens\": 188\n",
-      "  }\n",
-      "}\n",
-      "answer received in 9.581519842147827 seconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "function_call_prompt(\"\"\"\n",
-    "What is a camel?\n",
-    "\"\"\")"
-   ],
+   "execution_count": 15,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+    "ExecuteTime": {
+     "end_time": "2023-11-26T23:11:43.055813Z",
+     "start_time": "2023-11-26T23:11:43.025589Z"
     }
    }
   },
@@ -312,10 +312,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
