--- a/projects/chatgpt/chatgpt openai.ipynb
+++ b/projects/chatgpt/chatgpt openai.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "https://github.com/openai/openai-cookbook/blob/main/examples/How_to_call_functions_for_knowledge_retrieval.ipynb"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "outputs": [
@@ -127,64 +136,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "init\n"
+      "init\n",
+      "tools are [{'type': 'function', 'function': {'name': 'get_user_details', 'description': \"Retrieves information for a user based on the combination of their first and last names.  It returns information about the user's age, location, and profession.\", 'parameters': {'type': 'object', 'properties': {'first_name': {'type': 'string', 'description': 'First name of the user to get details of.'}, 'last_name': {'type': 'string', 'description': 'Last name of the user to get details of.'}}, 'required': ['first_name', 'last_name']}}}]\n"
      ]
     }
    ],
    "source": [
+    "%autoreload\n",
     "\n",
-    "# https://github.com/openai/openai-cookbook/blob/main/examples/How_to_call_functions_for_knowledge_retrieval.ipynb\n",
-    "import json \n",
-    "\n",
-    "llm_functions_agent = LLMFunctionsAgent()\n",
+    "llm_functions_agent = LLMFunctionsAgent(openai=openai)\n",
     "\n",
     "def function_call_prompt(question):\n",
-    "    tools = [\n",
-    "        {\n",
-    "            \"type\": \"function\",\n",
-    "            \"function\": {\n",
-    "                \"name\": \"get_user_details\",\n",
-    "                \"description\": \"Retrieves information for a user based on the combination of their first and last names.  It returns information about the user's age, location, and profession.\",\n",
-    "                \"parameters\":{\n",
-    "                    \"type\": \"object\",\n",
-    "                    \"properties\": {\n",
-    "                        \"first_name\": {\n",
-    "                            \"type\": \"string\",\n",
-    "                            \"description\": \"First name of the user to get details of.\"\n",
-    "                        },\n",
-    "                        \"last_name\": {\n",
-    "                            \"type\": \"string\",\n",
-    "                            \"description\": \"Last name of the user to get details of.\"\n",
-    "                        }\n",
-    "                    },\n",
-    "                    \"required\": [\"first_name\", \"last_name\"]\n",
-    "                }\n",
-    "            },\n",
-    "\n",
-    "        },\n",
-    "    ]\n",
-    "\n",
-    "    start_time_seconds = time.time()\n",
-    "    print(f\"asking chatgpt: {question}\")\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "        model=\"gpt-3.5-turbo\",\n",
-    "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant that answers questions accurately, without making up facts.\"},\n",
-    "            {\"role\": \"user\", \"content\": question}\n",
-    "        ],\n",
-    "        tools=tools\n",
-    "    )\n",
-    "    print(response)\n",
-    "    \n",
-    "    llm_functions_agent.call_appropriate_function_based_on_llm_response(response)\n",
-    "\n",
-    "    print(f\"answer received in {time.time() - start_time_seconds} seconds.\")\n"
+    "    llm_functions_agent.function_call_prompt(question)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -192,14 +161,14 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-26T23:08:48.705697Z",
-     "start_time": "2023-11-26T23:08:48.703151Z"
+     "end_time": "2023-11-26T23:34:20.270750Z",
+     "start_time": "2023-11-26T23:34:20.192273Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -208,9 +177,9 @@
       "asking chatgpt: \n",
       "Who is user Jason McAffee?\n",
       "{\n",
-      "  \"id\": \"chatcmpl-8PIaDIA8KgwbRVE9BZdRCxZTolDd3\",\n",
+      "  \"id\": \"chatcmpl-8PIvtoWKx1Xp3r8Cx9gG39Jf80rm5\",\n",
       "  \"object\": \"chat.completion\",\n",
-      "  \"created\": 1701040325,\n",
+      "  \"created\": 1701041669,\n",
       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
       "  \"choices\": [\n",
       "    {\n",
@@ -220,39 +189,7 @@
       "        \"content\": null,\n",
       "        \"tool_calls\": [\n",
       "          {\n",
-      "            \"id\": \"call_rlOzREqlNtC6EjPLBzdY6Kb7\",\n",
-      "            \"type\": \"function\",\n",
-      "            \"function\": {\n",
-      "              \"name\": \"get_user_details\",\n",
-      "              \"arguments\": \"{\\n  \\\"first_name\\\": \\\"Jason\\\",\\n  \\\"last_name\\\": \\\"McAffee\\\"\\n}\"\n",
-      "            }\n",
-      "          }\n",
-      "        ]\n",
-      "      },\n",
-      "      \"finish_reason\": \"tool_calls\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"usage\": {\n",
-      "    \"prompt_tokens\": 123,\n",
-      "    \"completion_tokens\": 27,\n",
-      "    \"total_tokens\": 150\n",
-      "  }\n",
-      "}\n",
-      "get_function_calls_details_from_llm_response called for response:\n",
-      "{\n",
-      "  \"id\": \"chatcmpl-8PIaDIA8KgwbRVE9BZdRCxZTolDd3\",\n",
-      "  \"object\": \"chat.completion\",\n",
-      "  \"created\": 1701040325,\n",
-      "  \"model\": \"gpt-3.5-turbo-0613\",\n",
-      "  \"choices\": [\n",
-      "    {\n",
-      "      \"index\": 0,\n",
-      "      \"message\": {\n",
-      "        \"role\": \"assistant\",\n",
-      "        \"content\": null,\n",
-      "        \"tool_calls\": [\n",
-      "          {\n",
-      "            \"id\": \"call_rlOzREqlNtC6EjPLBzdY6Kb7\",\n",
+      "            \"id\": \"call_KRqJpHcziG3w5Pv5bMq82LY8\",\n",
       "            \"type\": \"function\",\n",
       "            \"function\": {\n",
       "              \"name\": \"get_user_details\",\n",
@@ -271,7 +208,7 @@
       "  }\n",
       "}\n",
       "get_user_details function called with arguments first_name: Jason, last_name: McAffee\n",
-      "answer received in 3.6406028270721436 seconds.\n"
+      "answer received in 3.2325501441955566 seconds.\n"
      ]
     }
    ],
@@ -288,8 +225,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-26T23:12:08.200993Z",
-     "start_time": "2023-11-26T23:12:04.521116Z"
+     "end_time": "2023-11-26T23:34:32.522474Z",
+     "start_time": "2023-11-26T23:34:29.271938Z"
     }
    }
   },
