--- a/projects/chatgpt/chatgpt openai.ipynb
+++ b/projects/chatgpt/chatgpt openai.ipynb
@@ -136,14 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "init\n",
-      "tools are [{'type': 'function', 'function': {'name': 'get_user_details', 'description': \"Retrieves information for a user based on the combination of their first and last names.  It returns information about the user's age, location, and profession.\", 'parameters': {'type': 'object', 'properties': {'first_name': {'type': 'string', 'description': 'First name of the user to get details of.'}, 'last_name': {'type': 'string', 'description': 'Last name of the user to get details of.'}}, 'required': ['first_name', 'last_name']}}}]\n"
+      "init\n"
      ]
     }
    ],
@@ -152,8 +151,8 @@
     "\n",
     "llm_functions_agent = LLMFunctionsAgent(openai=openai)\n",
     "\n",
-    "def function_call_prompt(question):\n",
-    "    llm_functions_agent.function_call_prompt(question)\n"
+    "def inference(question):\n",
+    "    llm_functions_agent.inference(question)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -161,25 +160,23 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-26T23:34:20.270750Z",
-     "start_time": "2023-11-26T23:34:20.192273Z"
+     "end_time": "2023-11-27T00:04:41.427634Z",
+     "start_time": "2023-11-27T00:04:41.307863Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "asking chatgpt: \n",
-      "Who is user Jason McAffee?\n",
       "{\n",
-      "  \"id\": \"chatcmpl-8PIvtoWKx1Xp3r8Cx9gG39Jf80rm5\",\n",
+      "  \"id\": \"chatcmpl-8PJPAnLO0J2ZS83lwMZA2fPuhi3sj\",\n",
       "  \"object\": \"chat.completion\",\n",
-      "  \"created\": 1701041669,\n",
+      "  \"created\": 1701043484,\n",
       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
       "  \"choices\": [\n",
       "    {\n",
@@ -189,7 +186,7 @@
       "        \"content\": null,\n",
       "        \"tool_calls\": [\n",
       "          {\n",
-      "            \"id\": \"call_KRqJpHcziG3w5Pv5bMq82LY8\",\n",
+      "            \"id\": \"call_CUPhKKRWt08gncfO99ZC56XF\",\n",
       "            \"type\": \"function\",\n",
       "            \"function\": {\n",
       "              \"name\": \"get_user_details\",\n",
@@ -208,14 +205,15 @@
       "  }\n",
       "}\n",
       "get_user_details function called with arguments first_name: Jason, last_name: McAffee\n",
-      "answer received in 3.2325501441955566 seconds.\n"
+      "added function metadata content\n",
+      "answer received in 4.149604082107544 seconds.\n"
      ]
     }
    ],
    "source": [
     "%autoreload\n",
     "\n",
-    "function_call_prompt(\"\"\"\n",
+    "inference(\"\"\"\n",
     "Who is user Jason McAffee?\n",
     "\"\"\")"
    ],
@@ -225,8 +223,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-26T23:34:32.522474Z",
-     "start_time": "2023-11-26T23:34:29.271938Z"
+     "end_time": "2023-11-27T00:04:47.723614Z",
+     "start_time": "2023-11-27T00:04:43.555590Z"
     }
    }
   },
