function calling agent wip.

--- a/projects/chatgpt/chatgpt openai.ipynb
+++ b/projects/chatgpt/chatgpt openai.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
@@ -160,23 +160,24 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-27T00:04:41.427634Z",
-     "start_time": "2023-11-27T00:04:41.307863Z"
+     "end_time": "2023-11-27T02:46:43.056334Z",
+     "start_time": "2023-11-27T02:46:42.939161Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sending messages: [{'role': 'system', 'content': 'You are a helpful assistant that answers questions accurately, without making up facts.'}, {'role': 'user', 'content': '\\nWho is user Jason McAffee?\\n'}]\n",
       "{\n",
-      "  \"id\": \"chatcmpl-8PJPAnLO0J2ZS83lwMZA2fPuhi3sj\",\n",
+      "  \"id\": \"chatcmpl-8PLvyyvK9LViZUrOrV9GtKY2rX123\",\n",
       "  \"object\": \"chat.completion\",\n",
-      "  \"created\": 1701043484,\n",
+      "  \"created\": 1701053206,\n",
       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
       "  \"choices\": [\n",
       "    {\n",
@@ -186,7 +187,7 @@
       "        \"content\": null,\n",
       "        \"tool_calls\": [\n",
       "          {\n",
-      "            \"id\": \"call_CUPhKKRWt08gncfO99ZC56XF\",\n",
+      "            \"id\": \"call_9aP4cNXxLgBEAECCDFMYK6KR\",\n",
       "            \"type\": \"function\",\n",
       "            \"function\": {\n",
       "              \"name\": \"get_user_details\",\n",
@@ -206,7 +207,8 @@
       "}\n",
       "get_user_details function called with arguments first_name: Jason, last_name: McAffee\n",
       "added function metadata content\n",
-      "answer received in 4.149604082107544 seconds.\n"
+      "todo: pass function results back to chat completion\n",
+      "answer received in 2.1894562244415283 seconds.\n"
      ]
     }
    ],
@@ -223,8 +225,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-27T00:04:47.723614Z",
-     "start_time": "2023-11-27T00:04:43.555590Z"
+     "end_time": "2023-11-27T02:46:47.538226Z",
+     "start_time": "2023-11-27T02:46:45.330875Z"
     }
    }
   },
