--- a/projects/chatgpt/llm functions agent.ipynb
+++ b/projects/chatgpt/llm functions agent.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "outputs": [
     {
      "name": "stdout",
@@ -73,92 +73,22 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-02T16:29:16.979200Z",
-     "start_time": "2023-12-02T16:29:16.772666Z"
+     "end_time": "2023-12-02T17:02:11.554485Z",
+     "start_time": "2023-12-02T17:02:11.307944Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "inference called\n",
-      "sending messages: [{'role': 'system', 'content': 'You are a helpful assistant that answers questions accurately, without making up facts.'}, {'role': 'user', 'content': 'Who is user Jason McAffee?'}]\n",
-      "response from chatgpt:\n",
-      "{\n",
-      "  \"id\": \"chatcmpl-8RN9jnP50sewudPizHt8rlniCvFWH\",\n",
-      "  \"object\": \"chat.completion\",\n",
-      "  \"created\": 1701534559,\n",
-      "  \"model\": \"gpt-3.5-turbo-0613\",\n",
-      "  \"choices\": [\n",
-      "    {\n",
-      "      \"index\": 0,\n",
-      "      \"message\": {\n",
-      "        \"role\": \"assistant\",\n",
-      "        \"content\": null,\n",
-      "        \"tool_calls\": [\n",
-      "          {\n",
-      "            \"id\": \"call_GgwmEBKfbPwAmnZMq1DefbAS\",\n",
-      "            \"type\": \"function\",\n",
-      "            \"function\": {\n",
-      "              \"name\": \"get_user_details\",\n",
-      "              \"arguments\": \"{\\n  \\\"first_name\\\": \\\"Jason\\\",\\n  \\\"last_name\\\": \\\"McAffee\\\"\\n}\"\n",
-      "            }\n",
-      "          }\n",
-      "        ]\n",
-      "      },\n",
-      "      \"finish_reason\": \"tool_calls\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"usage\": {\n",
-      "    \"prompt_tokens\": 122,\n",
-      "    \"completion_tokens\": 27,\n",
-      "    \"total_tokens\": 149\n",
-      "  },\n",
-      "  \"system_fingerprint\": null\n",
-      "}\n",
-      "get_user_details function called with arguments first_name: Jason, last_name: McAffee\n",
-      "get_user_details is returning: {\"age\": 44, \"location\": {\"state\": \"Utah\"}, \"profession\": \"Software Engineer\"}\n",
-      "recursively calling inference to pass back the results of the functions called\n",
-      "inference called\n",
-      "sending messages: [{'role': 'system', 'content': 'You are a helpful assistant that answers questions accurately, without making up facts.'}, {'role': 'user', 'content': 'Who is user Jason McAffee?'}, {'role': 'assistant', 'tool_calls': [<OpenAIObject id=call_GgwmEBKfbPwAmnZMq1DefbAS at 0x7ff670773ef0> JSON: {\n",
-      "  \"id\": \"call_GgwmEBKfbPwAmnZMq1DefbAS\",\n",
-      "  \"type\": \"function\",\n",
-      "  \"function\": {\n",
-      "    \"name\": \"get_user_details\",\n",
-      "    \"arguments\": \"{\\n  \\\"first_name\\\": \\\"Jason\\\",\\n  \\\"last_name\\\": \\\"McAffee\\\"\\n}\"\n",
-      "  }\n",
-      "}]}, {'role': 'tool', 'content': '{\"age\": 44, \"location\": {\"state\": \"Utah\"}, \"profession\": \"Software Engineer\"}', 'tool_call_id': 'call_GgwmEBKfbPwAmnZMq1DefbAS', 'name': 'get_user_details'}]\n",
-      "response from chatgpt:\n",
-      "{\n",
-      "  \"id\": \"chatcmpl-8RN9mhr9oierbIg7HtZiyZhjJu9Vs\",\n",
-      "  \"object\": \"chat.completion\",\n",
-      "  \"created\": 1701534562,\n",
-      "  \"model\": \"gpt-3.5-turbo-0613\",\n",
-      "  \"choices\": [\n",
-      "    {\n",
-      "      \"index\": 0,\n",
-      "      \"message\": {\n",
-      "        \"role\": \"assistant\",\n",
-      "        \"content\": \"User Jason McAffee is a 44-year-old Software Engineer from Utah.\"\n",
-      "      },\n",
-      "      \"finish_reason\": \"stop\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"usage\": {\n",
-      "    \"prompt_tokens\": 181,\n",
-      "    \"completion_tokens\": 17,\n",
-      "    \"total_tokens\": 198\n",
-      "  },\n",
-      "  \"system_fingerprint\": null\n",
-      "}\n",
       "chatgpt response: \n",
-      " User Jason McAffee is a 44-year-old Software Engineer from Utah.\n",
-      "answer received in 4.497463703155518 seconds.\n"
+      " A camel is a large mammal with a hump on its back. It is native to the desert regions of the Middle East and North Africa. Camels are well-known for their ability to survive in extreme desert conditions, with features such as long legs, wide feet, and a thick coat that helps them adapt to their environment. They are often used as pack animals and are able to travel long distances without water. Camels are also known for their distinctive ability to store fat in their humps, which they can use as a source of energy when food and water is scarce.\n",
+      "answer received in 5.913498878479004 seconds.\n"
      ]
     }
    ],
@@ -166,7 +96,7 @@
     "%autoreload\n",
     "\n",
     "inference(\"\"\"\n",
-    "Who is user Jason McAffee?\n",
+    "What is a camel?\n",
     "\"\"\".strip())"
    ],
    "metadata": {
@@ -175,8 +105,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-02T16:29:23.253396Z",
-     "start_time": "2023-12-02T16:29:18.736511Z"
+     "end_time": "2023-12-02T17:03:05.624Z",
+     "start_time": "2023-12-02T17:02:59.690830Z"
     }
    }
   },
