--- a/projects/chatgpt/llm functions agent.ipynb
+++ b/projects/chatgpt/llm functions agent.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "outputs": [
     {
      "name": "stdout",
@@ -73,22 +73,24 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-02T17:02:11.554485Z",
-     "start_time": "2023-12-02T17:02:11.307944Z"
+     "end_time": "2023-12-02T17:23:54.147475Z",
+     "start_time": "2023-12-02T17:23:54.040737Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "get_user_details function called with arguments first_name: Jason, last_name: McAffee\n",
+      "get_user_details is returning: {\"age\": 44, \"location\": {\"state\": \"Utah\"}, \"profession\": \"Software Engineer\"}\n",
       "chatgpt response: \n",
-      " A camel is a large mammal with a hump on its back. It is native to the desert regions of the Middle East and North Africa. Camels are well-known for their ability to survive in extreme desert conditions, with features such as long legs, wide feet, and a thick coat that helps them adapt to their environment. They are often used as pack animals and are able to travel long distances without water. Camels are also known for their distinctive ability to store fat in their humps, which they can use as a source of energy when food and water is scarce.\n",
-      "answer received in 5.913498878479004 seconds.\n"
+      " Jason McAffee is a 44-year-old software engineer from Utah.\n",
+      "answer received in 102.94054388999939 seconds.\n"
      ]
     }
    ],
@@ -96,7 +98,7 @@
     "%autoreload\n",
     "\n",
     "inference(\"\"\"\n",
-    "What is a camel?\n",
+    "Who is Jason McAffee?\n",
     "\"\"\".strip())"
    ],
    "metadata": {
@@ -105,8 +107,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-02T17:03:05.624Z",
-     "start_time": "2023-12-02T17:02:59.690830Z"
+     "end_time": "2023-12-02T17:25:59.253689Z",
+     "start_time": "2023-12-02T17:24:08.040245Z"
     }
    }
   },
