--- a/projects/chatgpt/llm functions agent.ipynb
+++ b/projects/chatgpt/llm functions agent.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "outputs": [
     {
      "name": "stdout",
@@ -73,14 +73,14 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-02T20:39:14.470518Z",
-     "start_time": "2023-12-02T20:39:14.245421Z"
+     "end_time": "2023-12-02T20:52:11.773080Z",
+     "start_time": "2023-12-02T20:52:11.524139Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "outputs": [
     {
      "name": "stdout",
@@ -89,8 +89,8 @@
       "get_user_details function called with arguments first_name: Jason, last_name: McAffee\n",
       "get_user_details is returning: {\"age\": 44, \"location\": {\"state\": \"Utah\"}, \"profession\": \"Software Engineer\"}\n",
       "chatgpt response: \n",
-      " Jason McAffee is a 44-year-old software engineer from Utah.\n",
-      "answer received in 4.412718057632446 seconds.\n"
+      " Jason McAffee is a 44-year-old software engineer based in Utah.\n",
+      "answer received in 5.692757844924927 seconds.\n"
      ]
     }
    ],
@@ -107,8 +107,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-02T20:39:20.787930Z",
-     "start_time": "2023-12-02T20:39:16.357456Z"
+     "end_time": "2023-12-02T20:52:19.448571Z",
+     "start_time": "2023-12-02T20:52:13.734511Z"
     }
    }
   },
