base class for services which have functions that can be called by chatgpt.

--- a/projects/chatgpt/llm functions agent.ipynb
+++ b/projects/chatgpt/llm functions agent.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "outputs": [
     {
      "name": "stdout",
@@ -42,14 +42,14 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-01T20:51:27.023999Z",
-     "start_time": "2023-12-01T20:51:26.970616Z"
+     "end_time": "2023-12-02T21:21:46.098613Z",
+     "start_time": "2023-12-02T21:21:46.076115Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "outputs": [
     {
      "name": "stdout",
@@ -73,14 +73,14 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-02T20:52:11.773080Z",
-     "start_time": "2023-12-02T20:52:11.524139Z"
+     "end_time": "2023-12-02T21:24:20.994306Z",
+     "start_time": "2023-12-02T21:24:20.884040Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 76,
    "outputs": [
     {
      "name": "stdout",
@@ -89,8 +89,8 @@
       "get_user_details function called with arguments first_name: Jason, last_name: McAffee\n",
       "get_user_details is returning: {\"age\": 44, \"location\": {\"state\": \"Utah\"}, \"profession\": \"Software Engineer\"}\n",
       "chatgpt response: \n",
-      " Jason McAffee is a 44-year-old software engineer based in Utah.\n",
-      "answer received in 5.692757844924927 seconds.\n"
+      " Jason McAffee is a 44-year-old software engineer from Utah.\n",
+      "answer received in 4.829298973083496 seconds.\n"
      ]
     }
    ],
@@ -107,8 +107,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-02T20:52:19.448571Z",
-     "start_time": "2023-12-02T20:52:13.734511Z"
+     "end_time": "2023-12-02T21:24:27.907310Z",
+     "start_time": "2023-12-02T21:24:23.060340Z"
     }
    }
   },
